--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kit-iot-4g",
+  "name": "kit-iot-natura",
   "version": "0.2.5",
-  "description": "Kit Desenvolvimento IoT V2 - Telefonica Vivo",
+  "description": "Kit Desenvolvimento IoT V2 - Telefonica Vivo | Natura",
   "main": "index.js",
   "bin": "./bin/index.js",
   "preferGlobal": true,
@@ -18,15 +18,14 @@
   "author": "TID - Telefonica Vivo",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.4.8",
-    "express-validator": "~1.0.1",
-    "insight": "~0.3.0",
-    "open": "0.0.4",
+    "chalk": "^0.5.1",
+    "minimist": "^0.2.0",
+    "random-mac": "0.0.4",
     "request": "~2.31.0",
     "serialport": "~1.2.5",
     "single-line-log": "^0.4.1",
-    "socket.io": "~0.9.16",
-    "minimist": "^0.2.0"
+    "temporal": "^0.3.8",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
