--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "tbeta-git:vitorleal/m2m/kit_iot.git"
+    "url": "https://github.com/telefonicadigital/kit-iot-4g.git"
   },
   "author": "TID - Telefonica Vivo",
   "license": "MIT",
