--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   "author": "TID - Telefonica Vivo",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.4.8",
-    "express-validator": "~1.0.1",
-    "insight": "~0.3.0",
-    "open": "0.0.4",
-    "request": "~2.31.0",
-    "serialport": "~1.2.5",
-    "single-line-log": "^0.4.1",
-    "socket.io": "~0.9.16",
-    "minimist": "^0.2.0"
+    "body-parser": "^1.10.0",
+    "express": "^4.10.5",
+    "express-validator": "^2.7.0",
+    "insight": "^0.4.3",
+    "minimist": "^1.1.0",
+    "open": "0.0.5",
+    "request": "^2.51.0",
+    "serialport": "^1.4.9",
+    "single-line-log": "latest",
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
